bindings/unity/Runtime/Bw.cs

// Bw.cs — P/Invoke binding for the bwaudio C ABI (include/bwaudio.h).
//
// Pure marshalling layer, no Unity dependency (so it compiles + can be unit-tested standalone; the
// MonoBehaviour wrappers live in BwAudio.cs / BwEmitter.cs). Drop bwaudio.dll + phonon.dll in
// Assets/Plugins/. THREADING: every call must come from ONE thread (Unity's main thread); the
// per-frame calls are non-blocking. See docs/api.md + docs/concurrency.md.
//
// Marshalling rules that matter here:
//   * C `bool` is 1 byte  -> [MarshalAs(UnmanagedType.I1)].
//   * C `const char*`     -> [MarshalAs(UnmanagedType.LPUTF8Str)] for IN strings;
//                            IntPtr + Marshal.PtrToStringUTF8 for RETURNED strings (do not let the
//                            marshaller free a pointer the engine still owns).
//   * BwConfig.profile is a 4-byte enum, NOT a string — marshalling it as a string corrupts the call.
//   * Handles (BwSound/BwSource/BwBed/BwMaterial) are uint = (index | generation<<16); 0 = invalid.
using System;
using System.Runtime.InteropServices;

namespace CaveAudio
{
    public enum BwProfile : int { Cave = 0, Binaural = 1, Both = 2 }
    public enum BwDirectivity : int { Omni = 0, Cardioid = 1, Figure8 = 2 }
    public enum BwTestKind : int { Off = 0, Sine = 1, Noise = 2 }
    public enum BwPanner : int { Dbap = 0, Spcap = 1, Vbap = 2 }
    public enum BwBedDecoder : int { Sampling = 0, Allrad = 1 }
    public enum BwSpreadMode : int { Lobe = 0, Mdap = 1 }
    public enum BwBedRenderer : int { Matrix = 0, Parametric = 1 }

    /// <summary>The engine's built-in acoustic materials (BW_PRESETS in engine.c, same order). This is
    /// an ENUM rather than the raw string bw_material_preset takes, because an unrecognised name is not
    /// an error there — it quietly returns material 0 (the generic default) and leaves the reason in
    /// bw_last_error, so a typo'd "concreet" wall just sounds wrong instead of failing.</summary>
    public enum BwMaterialPreset : int
    {
        Generic = 0, Brick, Concrete, Ceramic, Gravel, Carpet, Glass, Plaster, Wood, Metal, Rock
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct BwConfig
    {
        public BwProfile profile;                                       // 4-byte int enum
        [MarshalAs(UnmanagedType.LPUTF8Str)] public string layoutPath;  // const char* (or null)
        [MarshalAs(UnmanagedType.LPUTF8Str)] public string hrtfPath;    // const char* (or null)
        public uint sampleRate;                                         // 48000
        public uint blockSize;                                          // e.g. 256
        [MarshalAs(UnmanagedType.I1)] public bool trackInternal;        // true => core reads NatNet itself
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct BwReflectionConfig
    {
        public float irSeconds;      // reverb tail length; 0 => default 1.0
        public uint  order;          // ambisonic order 1 or 2; 0 => default 1
        public uint  numRays;        // off-thread ray budget; 0 => default 4096
        public uint  numBounces;     // off-thread bounce depth; 0 => default 16
        public int   enabled;        // 0 => no bed created
        public float wetGain;        // reverb level summed onto the bus; 0 => default 1.0
        public uint  reserved0, reserved1, reserved2;   // matches reserved[3]; keep zero
    }

    /// <summary>Raw P/Invoke entry points. 1:1 with include/bwaudio.h.</summary>
    public static class Bw
    {
        const string DLL = "bwaudio";
        const CallingConvention CC = CallingConvention.Cdecl;

        // ---- lifecycle (load time; may block/allocate) ----
        [DllImport(DLL, CallingConvention = CC)] public static extern IntPtr bw_create(in BwConfig cfg);
        [DllImport(DLL, CallingConvention = CC)] public static extern int    bw_start(IntPtr e);
        [DllImport(DLL, CallingConvention = CC)] public static extern int    bw_stop(IntPtr e);
        [DllImport(DLL, CallingConvention = CC)] public static extern void   bw_destroy(IntPtr e);
        [DllImport(DLL, CallingConvention = CC)] public static extern IntPtr bw_last_error(IntPtr e);     // PtrToStringUTF8; null = none
        [DllImport(DLL, CallingConvention = CC)] public static extern IntPtr bw_audio_backend(IntPtr e);  // "asio:<drv>" / "null" / "none"

        // ---- assets (load time; file I/O) ----
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_load_sound(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_load_sound_streaming(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_unload_sound(IntPtr e, uint snd);
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_load_ambix(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

        // ---- sources (per-frame; non-blocking) ----
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_source_create(IntPtr e);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_priority(IntPtr e, uint s, int priority);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_destroy(IntPtr e, uint s);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_pos(IntPtr e, uint s, float x, float y, float z);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_gain(IntPtr e, uint s, float linear);
        // Engine-side timed fades (no per-frame scripting). fade_out lands on the click-free stop path.
        // A later set_gain or fade replaces a running one.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_fade_to(IntPtr e, uint s, float gain, float seconds);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_fade_out(IntPtr e, uint s, float seconds);
        // Mix groups (0..7; sources start in group 0): a group gain folds into every member's gain solve
        // and a paused group freezes its members exactly like per-voice pause.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_group(IntPtr e, uint s, uint group);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_group_set_gain(IntPtr e, uint group, float linear);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_group_set_paused(IntPtr e, uint group, [MarshalAs(UnmanagedType.I1)] bool paused);
        // Playback rate, clamped [0.25, 4] (glides across a block). In-memory sounds only — streams ignore it.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_pitch(IntPtr e, uint s, float rate);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_play(IntPtr e, uint s, uint snd, [MarshalAs(UnmanagedType.I1)] bool loop);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_play_at(IntPtr e, uint s, uint snd, [MarshalAs(UnmanagedType.I1)] bool loop, ulong startSample);
        [DllImport(DLL, CallingConvention = CC)] public static extern ulong bw_dsp_time(IntPtr e);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_stop(IntPtr e, uint s);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_paused(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool paused);
        // Global pause: EVERY voice (memory, streamed, bed) ramps out and freezes; resume continues exactly.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_paused(IntPtr e, [MarshalAs(UnmanagedType.I1)] bool paused);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_seek(IntPtr e, uint s, ulong frame);   // engine-rate frames; in-memory sounds
        [DllImport(DLL, CallingConvention = CC)] [return: MarshalAs(UnmanagedType.I1)] public static extern bool bw_source_is_playing(IntPtr e, uint s);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_play_oneshot(IntPtr e, uint snd, float x, float y, float z, float gain);

        // ---- ambisonic beds (world-locked diffuse soundfields) ----
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_bed_create(IntPtr e);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_bed_play(IntPtr e, uint b, uint snd, [MarshalAs(UnmanagedType.I1)] bool loop);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_bed_set_gain(IntPtr e, uint b, float linear);
        // Yaw the soundfield about the room's vertical axis, in RADIANS, in the ROOM frame (positive turns
        // the field from room +z toward room +x). Unity's yaw is the opposite sense — convert with
        // Room.YawRad, do not pass a Unity euler angle straight in. Glides (~1 turn/s), click-free.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_bed_set_rotation(IntPtr e, uint b, float yawRad);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_bed_stop(IntPtr e, uint b);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_bed_destroy(IntPtr e, uint b);

        // ---- materials / scene geometry (load time; needs the Steam Audio build) ----
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_scene_set_mesh(IntPtr e, float[] verts, int nverts, int[] tris, int ntris, float[] absorption, float scattering, float[] transmission);
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_material_preset(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_material_define(IntPtr e, float[] absorption, float scattering, float[] transmission);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_scene_set_mesh_mat(IntPtr e, float[] verts, int nverts, int[] tris, int ntris, uint[] triMaterial);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_scene_set_box(IntPtr e, float w, float h, float d, uint[] faces);

        // ---- occlusion (per-frame setters; readback any time) ----
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_occlusion(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool on);
        // MANUAL occlusion (no SDK needed): drive the sim's own publish path from game logic. `level` is
        // broadband transmittance (1 = clear .. 0 = blocked); `bands` is an optional low/mid/high tilt in
        // [0,1] rendered as the same 3-biquad transmission EQ (so a wall MUFFLES, not just attenuates) —
        // pass null (marshals to NULL) for broadband only. Do NOT also enable bw_source_set_occlusion on
        // the same source: the sim republishes every tick and wins.
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_occlusion_manual(IntPtr e, uint s, float level, float[] bands);
        [DllImport(DLL, CallingConvention = CC)] public static extern float bw_source_get_occlusion(IntPtr e, uint s);
